--- a/package.json
+++ b/package.json
@@ -124,13 +124,13 @@
     "mdast-util-gfm": "^3.1.0",
     "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
-    "next": "^16.0.1",
+    "next": "16.0.7",
     "pdfjs-dist": "^5.4.149",
     "plyr": "^3.7.8",
-    "react": "^19.2.0",
+    "react": "^19.2.1",
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
@@ -162,7 +162,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@next/bundle-analyzer": "^16.0.1",
+    "@next/bundle-analyzer": "16.0.7",
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
@@ -174,8 +174,8 @@
     "@types/markdown-it": "^14.1.2",
     "@types/node": "22.15.18",
     "@types/prettier": "^3.0.0",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.1",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
@@ -187,7 +187,7 @@
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.1",
     "eslint": "9.27.0",
-    "eslint-config-next": "^16.0.1",
+    "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
